fixed responsive layout for proper alignment

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -71,7 +71,11 @@ a.btn{
 	font-weight:400;
 	margin-bottom: $gap;
 }
-
+div.wrap{
+	max-width:1200px;
+	margin-left:auto;
+	margin-right: auto;
+}
 
 
 
