--- a/assets/sass/_screen-sm.scss
+++ b/assets/sass/_screen-sm.scss
@@ -25,7 +25,7 @@
 						@include font-size(2);
 						font-weight: 300;
 					}
-					&:last-child{
+					&:last-child:after{
 						content: '';
 					}
 					a{
